CHANGE: MVP version of blog tags

--- a/app/views/bravura_template_prime/authors/show/_section_all_posts.html.erb
+++ b/app/views/bravura_template_prime/authors/show/_section_all_posts.html.erb
@@ -3,7 +3,7 @@
 		<h2 class="text-xl font-bold text-secondary-900 sm:text-2xl">All posts</h2>
 		<div class="relative grid grid-cols-1 items-start gap-16 mt-8 lg:grid-cols-12">
 			<div class="categories-sidebar lg:sticky lg:col-span-3 lg:top-28">
-				<p class="hidden text-xs font-bold uppercase tracking-widest text-secondary-500 lg:block">Tags</p>
+				<p class="hidden text-xs font-bold uppercase tracking-widest text-secondary-500 lg:block">Tags12</p>
 				<nav class="max-h-[50vh] overflow-y-auto mt-5 space-y-1 hidden lg:block" aria-label="Sidebar">
 					<%= link_to '/tags/all-tags', class: "group flex w-full items-center text-sm font-medium rounded-lg px-3 py-2 bg-secondary-100 text-secondary-900", aria: { current: 'page' } do %>
 						<span class="truncate">All Tags</span>
