--- a/app/views/bravura_template_prime/blog/index/_featured_article_main.html.erb
+++ b/app/views/bravura_template_prime/blog/index/_featured_article_main.html.erb
@@ -42,7 +42,7 @@
     <%# tags %>
     <div class="article-tags-list flex flex-wrap mt-5">
       <% article.tag_list.each do |tag| %>
-        <%= link_to tag.humanize, blog_category_path(tag), class: 'article-tag inline-flex items-center bg-secondary-100 text-xs font-bold text-secondary-600 transition-all duration-200 mr-2 mb-2 rounded-full px-2.5 py-0.5 hover:bg-secondary-200 hover:text-secondary-900', data: { umami_event: "Clicked Link: #{blog_category_path(tag)}", umami_href: blog_category_path(tag) } %>
+              <%= link_to tag.humanize, tag_path(tag), class: 'article-tag inline-flex items-center bg-secondary-100 text-xs font-bold text-secondary-600 transition-all duration-200 mr-2 mb-2 rounded-full px-2.5 py-0.5 hover:bg-secondary-200 hover:text-secondary-900', data: { umami_event: "Clicked Link: #{blog_category_path(tag)}", umami_href: blog_category_path(tag) } %>
       <% end %>
 		</div>
 	</div>
