--- a/app/views/bravura_template_prime/shared/_categories_sidebar.html.erb
+++ b/app/views/bravura_template_prime/shared/_categories_sidebar.html.erb
@@ -1,5 +1,5 @@
 <aside class="categories-sidebar lg:sticky lg:col-span-3 lg:top-28">
-  <h3 class="text-lg font-semibold text-secondary-900 mb-4">Tags</h3>
+  <h3 class="text-lg font-semibold text-secondary-900 mb-4 block sm:hidden">Tags</h3>
   <div class="space-y-2">
     <%= render 'bravura_template_prime/shared/tag_list' %>
   </div>
