--- a/app/views/bravura_template_prime/shared/_head.html.erb
+++ b/app/views/bravura_template_prime/shared/_head.html.erb
@@ -1,7 +1,30 @@
-<%# app/views/bravura_template_prime/shared/_head.html.erb %>
+<%# FIXME: These variables should be placed better, 
+  but I need to figure it out later -- CT
+%>
+<%
+    # Button radius
+     button_radius = {
+      'rounded-none' => '0px',       # No border radius
+      'rounded-sm' => '0.125rem',    # Small border radius (2px)
+      'rounded-md' => '0.375rem',    # Medium border radius (6px)
+      'rounded-lg' => '0.5rem',      # Large border radius (8px)
+      'rounded-xl' => '0.75rem',     # Extra large border radius (12px)
+      'rounded-2xl' => '1rem',       # 2x extra large border radius (16px)
+      'rounded-3xl' => '1.5rem',     # 3x extra large border radius (24px)
+      'rounded-full' => '9999px'     # Full border radius (pill shape)
+    }
+    
+    button_style_id = @presenter.get("design.button_style_id")
+    button_style_classes = ButtonStyle.find(button_style_id).style_classes
+    cta_button_radius = button_radius.fetch(button_style_classes, '0px') # Fallback to '0px' if key not found
+
+    # Navigation alignment
+    navigation_bar_id = @presenter.get("design.navigation_bar_id")
+    @navigation_style_classes = NavigationBar.find(navigation_bar_id).style_classes
+%>
+
 <%= content_tag :title, @presenter.get("general.publication_name") %>
 <%= favicon_link_tag @presenter.get('general.favicon').present? ? rails_blob_url(@presenter.get('general.favicon')) : asset_path('default_favicon.png') %>
-
 <%= tag.meta charset: "utf-8" %>
 <%= tag.meta name: "viewport", content: "width=device-width,initial-scale=1" %>
 <%= tag.meta name: "twitter:card", content: "summary_large_image" %>
@@ -14,10 +37,8 @@
 <%= tag.meta property: "og:image", content: url_for(@presenter.get('general.social_cover')) %>
 <%= tag.meta property: "og:site_name", content: @presenter.get('general.publication_name') %>
 <%= tag.meta property: "og:type", content: "article" %>
-
 <%= csrf_meta_tags %>
 <%= csp_meta_tag %>
-
 <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
 <%= stylesheet_link_tag "application", media: "all", "data-turbo-track": "reload" %>
 <%= stylesheet_link_tag "thefour", media: "all", "data-turbo-track": "reload" %>
@@ -27,12 +48,13 @@
 
 <style>
   :root {
-    --cta-button-radius: <%= @button_radius %>;
-    --headings-font-family: <%= @presenter.get("design.heading_font") %>, sans-serif;
-    --content-font-family: <%= @presenter.get("design.content_font") %>, sans-serif;
+    --headings-font-family: <%= @presenter.get("design.heading_font") %>, sans-serif, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --content-font-family: <%= @presenter.get("design.content_font") %>, sans-serif, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --cta-button-radius: <%= cta_button_radius %>;
   }
   .notion-collection-page-properties { display: none !important; }
+  .rounded-cta-button-radius {
+    border-radius: var(--cta-button-radius);
+  }
 </style>
-
-
 <%= yield :head %>
