--- a/app/views/bravura_template_prime/shared/_nav_links_new.html.erb
+++ b/app/views/bravura_template_prime/shared/_nav_links_new.html.erb
@@ -1,23 +1,23 @@
-<%
-  design_navigation_bar_id = @presenter.get('design.navigation_bar_id')
-  @current_navigation_bar = NavigationBar.find(design_navigation_bar_id)
-  @navigation_style_classes = @current_navigation_bar.style_classes || "missed-navigation-classes" # Fallback to empty string if key not found for centered alignment
-%>
+<%# set tailwind classes %>
+<%# FIXME: This hack should be refactored to a better place for this engine %>
+<% 
+    # Navigation alignment
+    navigation_bar_id = @presenter.get("design.navigation_bar_id")
+    @navigation_bar = NavigationBar.find(navigation_bar_id)
+    @navigation_style_classes = @navigation_bar.style_classes || "missed-navigation-classes" # Fallback to empty string if key not found for centered alignment
 
-<%
-  navigation = Settings::Navigation.find(@presenter.get("navigation.id"))
-  links = navigation.links.map do |link|
-    {
-      text: link.name,
-      href: link.link_kind == "external_link" ? link.external_link : (link.generated_page_type ? "/#{link.generated_page_type}" : "#"),
-      event: "Clicked Link: #{link.link_kind == "external_link" ? link.external_link : link.generated_page_type}",
-      external: link.link_kind == "external_link"
-    }
-  end
-%>
-
+    @nav_links = navigation_bar.links.map do |link|
+        {
+        text: link.name,
+        href: link.link_kind == "external_link" ? link.external_link : (link.generated_page_type ? "/#{link.generated_page_type}" : "#"),
+        event: "Clicked Link: #{link.link_kind == "external_link" ? link.external_link : link.generated_page_type}",
+        external: link.link_kind == "external_link"
+        }
+    end
+ %>
+<%# use tailwind classes %>
 <div class="nav-link-wrapper-left hidden lg:flex lg:items-center lg:justify-end lg:gap-4 <%= @navigation_style_classes %> ">
-  <% links.each do |link| %>
+  <% @@navigation_bar.links.each do |link| %>
     <%= link_to link[:href], 
                 class: "nav-link nav-link-left group inline-flex items-center justify-center gap-1 text-base transition-all duration-200 rounded-cta-button-radius px-3 py-1.5 hover:bg-secondary-100 focus:outline-none focus:ring-2 focus:ring-offset-2 font-medium text-secondary-500 hover:text-secondary-900 focus:ring-secondary-900",
                 'data-umami-event': link[:event], 
