fix: image_tag was not pointed to the proper social icon in the footer

--- a/app/views/bravura_template_prime/shared/_social_links.html.erb
+++ b/app/views/bravura_template_prime/shared/_social_links.html.erb
@@ -2,15 +2,15 @@
 
 <%
 social_links = [
-  { name: "Facebook", url: @presenter.get("general.facebook_url"), icon: "brands/facebook" },
-  { name: "Twitter/X", url: @presenter.get("general.x_url"), icon: "brands/twitter" },
-  { name: "Instagram", url: @presenter.get("general.instagram_url"), icon: "brands/instagram" },
-  { name: "LinkedIn", url: @presenter.get("general.linkedin_url"), icon: "brands/linkedin" },
-  { name: "Pinterest", url: @presenter.get("general.pinterest_url"), icon: "brands/pinterest" },
-  { name: "TikTok", url: @presenter.get("general.tiktok_url"), icon: "brands/tiktok" },
-  { name: "Telegram", url: @presenter.get("general.telegram_url"), icon: "brands/telegram" },
-  { name: "Mastodon", url: @presenter.get("general.mastodon_url"), icon: "brands/mastodon" },
-  { name: "YouTube", url: @presenter.get("general.youtube_url"), icon: "brands/youtube" }
+  { name: "Facebook", url: @presenter.get("general.facebook_url"), icon: "bravura_template_prime/facebook" },
+  { name: "Twitter/X", url: @presenter.get("general.x_url"), icon: "bravura_template_prime/twitter" },
+  { name: "Instagram", url: @presenter.get("general.instagram_url"), icon: "bravura_template_prime/instagram" },
+  { name: "LinkedIn", url: @presenter.get("general.linkedin_url"), icon: "bravura_template_prime/linkedin" },
+  { name: "Pinterest", url: @presenter.get("general.pinterest_url"), icon: "bravura_template_prime/pinterest" },
+  { name: "TikTok", url: @presenter.get("general.tiktok_url"), icon: "bravura_template_prime/tiktok" },
+  { name: "Telegram", url: @presenter.get("general.telegram_url"), icon: "bravura_template_prime/telegram" },
+  { name: "Mastodon", url: @presenter.get("general.mastodon_url"), icon: "bravura_template_prime/mastodon" },
+  { name: "YouTube", url: @presenter.get("general.youtube_url"), icon: "bravura_template_prime/youtube" }
 ]
 %>
 
