--- a/app/views/bravura_template_prime/shared/_article_card.html.erb
+++ b/app/views/bravura_template_prime/shared/_article_card.html.erb
@@ -41,10 +41,11 @@
 			<%= article.excerpt %>
 		</p>
 		<% end %>
-		<div class="article-tags-list flex flex-wrap mt-5">
-      <% article.tag_list.each do |tag| %>
-        <%= link_to tag.humanize, blog_category_path(tag), class: "article-tag inline-flex items-center bg-secondary-100 text-xs font-bold text-secondary-600 transition-all duration-200 mr-2 mb-2 rounded-full px-2.5 py-0.5 hover:bg-secondary-200 hover:text-secondary-900", data: { umami_event: "Clicked Link: #{blog_category_path(tag)}", umami_href: blog_category_path(tag) } %>
-      <% end %>
-		</div>
+		<%# FIXME: We are not using the blog_category_path or blog_category controller. Fix the link to filter the posts like the list of tags does in the left aside on the blog index  %>
+		<%# <div class="article-tags-list flex flex-wrap mt-5"> %>
+      <%# article.tag_list.each do |tag| %>
+        <%#= link_to tag.humanize, blog_category_path(tag), class: "article-tag inline-flex items-center bg-secondary-100 text-xs font-bold text-secondary-600 transition-all duration-200 mr-2 mb-2 rounded-full px-2.5 py-0.5 hover:bg-secondary-200 hover:text-secondary-900", data: { umami_event: "Clicked Link: #{blog_category_path(tag)}", umami_href: blog_category_path(tag) } %>
+      <%# end %>
+		<%# </div> %>
 	</div>
 </div>
