CHANGE: reset blog/index.html.erb for testing to eliminate 500 error

--- a/app/views/bravura_template_prime/blog/index.html.erb
+++ b/app/views/bravura_template_prime/blog/index.html.erb
@@ -1,7 +1,7 @@
-<%= render 'bravura_template_prime/shared/hero' %>
-<%= render 'bravura_template_prime/blog/search_form' %>
+<%#= render 'bravura_template_prime/shared/hero' %>
+<%#= render 'bravura_template_prime/blog/search_form' %>
 
-<%= @presenter.get("email_newsletter_setup.header_enabled") == true ? render(
+<%#= @presenter.get("email_newsletter_setup.header_enabled") == true ? render(
   partial: 'bravura_template_prime/shared/newsletter',
   locals: {
     section: 'header',
@@ -13,7 +13,7 @@
 
 <% unless @query.present? or @tag.present? %>  
   <section class="section normal-featured-articles-list bg-secondary-50 pb-12 sm:pb-16 lg:pb-20">
-    <%= render 'bravura_template_prime/blog/featured_articles', articles: @featured_posts %>
+    <%#= render 'bravura_template_prime/blog/featured_articles', articles: @featured_posts %>
   </section>
 <% end %>
 
@@ -23,13 +23,13 @@
       <%= @query.present? ? "Search Results for '#{@query}'" : "All articles" %>
     </h2>
     <div class="relative grid grid-cols-1 items-start gap-16 mt-8 lg:grid-cols-12">
-      <%= render 'bravura_template_prime/shared/categories_sidebar' %>
-      <%= render 'bravura_template_prime/blog/articles_grid', articles: @posts %>
+      <%#= render 'bravura_template_prime/shared/categories_sidebar' %>
+      <%#= render 'bravura_template_prime/blog/articles_grid', articles: @posts %>
     </div>
   </div>
 </section>
 
-<%= @presenter.get("email_newsletter_setup.footer_enabled") == true ? render(
+<%#= @presenter.get("email_newsletter_setup.footer_enabled") == true ? render(
   partial: 'bravura_template_prime/shared/newsletter',
   locals: {
     section: 'footer',  # Note: Changed from 'header' to 'footer'
