--- a/app/views/bravura_template_prime/authors/show/_section_all_posts.html.erb
+++ b/app/views/bravura_template_prime/authors/show/_section_all_posts.html.erb
@@ -54,7 +54,7 @@
 				<div class="articles-grid grid grid-cols-1 gap-8 sm:grid-cols-2 lg:gap-y-12 xl:grid-cols-3">
 				<% @articles.each do |article| %>
 					<div class="normal-article group relative">
-						<%= link_to blog_path(article), class: "article-cover aspect-w-16 aspect-h-8 block overflow-hidden bg-secondary-200 rounded-lg", data: { "umami-event": "Clicked Link: #{article.slug}", "umami-href": blog_path(article) } do %>
+						<%#= link_to blog_path(article), class: "article-cover aspect-w-16 aspect-h-8 block overflow-hidden bg-secondary-200 rounded-lg", data: { "umami-event": "Clicked Link: #{article.slug}", "umami-href": blog_path(article) } do %>
 							<span class="sr-only"><%= article.title %></span>
 							<%= image_tag url_for(article.cover), alt: article.title, class: "h-full w-full object-cover transition-all duration-100 group-hover:opacity-75" %>
 						<% end %>
@@ -78,7 +78,7 @@
 									<time datetime="<%= article.published_at.to_date %>"><%= article.published_at.strftime("%b %d, %Y") %></time>
 								</p>
 							</div>
-							<%= link_to blog_path(article), class: "block mt-4", data: { "umami-event": "Clicked Link: #{article.slug}", "umami-href": blog_path(article) } do %>
+							<%#= link_to blog_path(article), class: "block mt-4", data: { "umami-event": "Clicked Link: #{article.slug}", "umami-href": blog_path(article) } do %>
 								<h3 class="article-title text-xl font-bold tracking-tight text-secondary-900"><%= article.title %></h3>
 								<p class="article-excerpt text-base font-medium text-secondary-500 line-clamp-3 mt-3"><%= article.excerpt %></p>
 							<% end %>
