--- a/app/views/bravura_template_prime/blog/index/_article.html.erb
+++ b/app/views/bravura_template_prime/blog/index/_article.html.erb
@@ -1,5 +1,5 @@
 <div class="normal-article group relative">
-	<%= link_to blog_url(article), class: "article-cover aspect-w-16 aspect-h-8
+	<%#= link_to blog_url(article), class: "article-cover aspect-w-16 aspect-h-8
    block overflow-hidden bg-secondary-200 rounded-lg", data: { umami_event: "Clicked Link: #{blog_path(article)}", umami_href: blog_path(article) } do %>
 	  <span class="sr-only"><%= article.title %></span>
     <% if !article.hide_cover %>
