--- a/app/views/bravura_template_prime/blog/index/_featured_article_main.html.erb
+++ b/app/views/bravura_template_prime/blog/index/_featured_article_main.html.erb
@@ -1,6 +1,6 @@
 <%# app/views/bravura_template_prime/blog/index/_featured_article_main.html.erb %>
 <div class="normal-main-featured-article group relative">
-	<%= link_to blog_path(article), class: "article-cover aspect-w-16 aspect-h-8 block overflow-hidden bg-secondary-200 rounded-lg", data: { umami_event: "Clicked Link:
+	<%#= link_to blog_path(article), class: "article-cover aspect-w-16 aspect-h-8 block overflow-hidden bg-secondary-200 rounded-lg", data: { umami_event: "Clicked Link:
 	/6-ways-email-sms-are-changing-the-customer-experience", umami_href: "/6-ways-email-sms-are-changing-the-customer-experience" } do %>
 	  <span class="sr-only">
       <%= article.title %>
@@ -33,7 +33,7 @@
         </time>
       </p>
 		</div>
-    <%= link_to blog_path(article), class: "block mt-4", data: { umami_event: "Clicked Link: #{blog_path(article)}", umami_href: blog_path(article) } do %>
+    <%#= link_to blog_path(article), class: "block mt-4", data: { umami_event: "Clicked Link: #{blog_path(article)}", umami_href: blog_path(article) } do %>
       <h3 class="article-title text-xl font-bold tracking-tight text-secondary-900"><%= article.title %></h3>
       <p class="article-excerpt text-base font-medium text-secondary-500 line-clamp-2 mt-3">
         <%= article.excerpt %>
