--- a/app/views/bravura_template_prime/shared/_article_card.html.erb
+++ b/app/views/bravura_template_prime/shared/_article_card.html.erb
@@ -1,5 +1,5 @@
 <div class="normal-article group relative">
-	<%= link_to blog_path(article), class: "article-cover aspect-w-16 aspect-h-8 block overflow-hidden bg-secondary-200 rounded-lg", data: { umami_event: "Clicked Link: #{blog_path(article)}", umami_href: "#{blog_path(article)}" } do %>
+	<%#= link_to blog_path(article), class: "article-cover aspect-w-16 aspect-h-8 block overflow-hidden bg-secondary-200 rounded-lg", data: { umami_event: "Clicked Link: #{blog_path(article)}", umami_href: "#{blog_path(article)}" } do %>
 	<span class="sr-only">
 		<%= article.title %>
 	</span>
@@ -33,7 +33,7 @@
 				</time>
 			</p>
 		</div>
-		<%= link_to blog_path(article), class: "block mt-4", data: { umami_event: "Clicked Link: #{blog_path(article)}", umami_href: "#{blog_path(article)}" } do %>
+		<%#= link_to blog_path(article), class: "block mt-4", data: { umami_event: "Clicked Link: #{blog_path(article)}", umami_href: "#{blog_path(article)}" } do %>
 		<h3 class="article-title text-xl font-bold tracking-tight text-secondary-900">
 			<%= article.title %>
 		</h3>
