--- a/app/views/bravura_template_prime/shared/_copyright_notice.html.erb
+++ b/app/views/bravura_template_prime/shared/_copyright_notice.html.erb
@@ -1,6 +1,6 @@
       <p class="copyright-notice text-sm text-secondary-600">
-        <% if @presenter.get("footer.copyright").present? %>
-            <%= @presenter.get("footer.copyright") %>
+        <% if @gss.get("footer.copyright").present? %>
+            <%= @gss.get("footer.copyright") %>
         <% else %>
             &copy; <%= Time.current.year %> <%= "site_name" %>. All Rights Reserved.
         <% end %>
