WIP: no errors in the blog index

--- a/app/views/bravura_template_prime/shared/_footer_links.html.erb
+++ b/app/views/bravura_template_prime/shared/_footer_links.html.erb
@@ -1,5 +1,5 @@
 <%
-  footer = Settings::Footer.find(@gss.get("footer.id"))
+  footer = Settings::Footer.find(@presenter.get("footer.id"))
   links = footer.links.map do |link|
     {
       text: link.name,
