--- a/app/views/bravura_template_prime/blog/index.html.erb
+++ b/app/views/bravura_template_prime/blog/index.html.erb
@@ -1,1 +1,45 @@
-<h1>blog index</h1>
+<%= render 'bravura_template_prime/shared/hero' %>
+<%= render 'bravura_template_prime/blog/search_form' %>
+
+<%= @presenter.get("email_newsletter_setup.header_enabled") == true ? render(
+  partial: 'bravura_template_prime/shared/newsletter',
+  locals: {
+    section: 'header',
+    headline: @presenter.get("email_newsletter_setup.header_headline"),
+    subheadline: @presenter.get("email_newsletter_setup.header_text"),
+    disclaimer: @presenter.get("email_newsletter_setup.header_disclaimer")
+  }
+) : '' %>
+
+<% unless @query.present? or @tag.present? %>  
+  <section class="section normal-featured-articles-list bg-secondary-50 pb-12 sm:pb-16 lg:pb-20">
+    <%#= render 'bravura_template_prime/blog/featured_articles', articles: @featured_posts %>
+<% if @featured_or_recent.any? %>
+  <%= render 'bravura_template_prime/blog/featured_articles', articles: @featured_or_recent %>
+<% else %>
+  <%= render 'bravura_template_prime/blog/featured_articles_placeholder' %>
+<% end %>
+  </section>
+<% end %>
+
+<section id="all-posts" class="section normal-articles-list bg-white py-12 sm:py-16 lg:py-20">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <h2 class="text-xl font-bold text-secondary-900 sm:text-2xl">
+      <%= @query.present? ? "Search Results for '#{@query}'" : "All articles" %>
+    </h2>
+    <div class="relative grid grid-cols-1 items-start gap-16 mt-8 lg:grid-cols-12">
+      <%= render 'bravura_template_prime/shared/categories_sidebar' %>
+      <%= render 'bravura_template_prime/blog/articles_grid', articles: @posts %>
+    </div>
+  </div>
+</section>
+
+<%= @presenter.get("email_newsletter_setup.footer_enabled") == true ? render(
+  partial: 'bravura_template_prime/shared/newsletter',
+  locals: {
+    section: 'footer',  # Note: Changed from 'header' to 'footer'
+    headline: @presenter.get("email_newsletter_setup.footer_headline"),
+    subheadline: @presenter.get("email_newsletter_setup.footer_text"),
+    disclaimer: @presenter.get("email_newsletter_setup.footer_disclaimer")
+  }
+) : '' %>
