--- a/app/views/bravura_template_prime/shared/_head.html.erb
+++ b/app/views/bravura_template_prime/shared/_head.html.erb
@@ -14,28 +14,29 @@
       'rounded-full' => '9999px'     # Full border radius (pill shape)
     }
     
-    button_style_id = @gss.get("design.button_style_id")
+    button_style_id = @presenter.get("design.button_style_id")
     button_style_classes = ButtonStyle.find(button_style_id).style_classes
     cta_button_radius = button_radius.fetch(button_style_classes, '0px') # Fallback to '0px' if key not found
 
     # Navigation alignment
-    navigation_bar_id = @gss.get("design.navigation_bar_id")
+    navigation_bar_id = @presenter.get("design.navigation_bar_id")
     @navigation_style_classes = NavigationBar.find(navigation_bar_id).style_classes
 %>
 
-<%= content_tag :title, @gss.get("general.publication_name") %>
-<%= favicon_link_tag @gss.get('general.favicon').present? ? rails_blob_url(@gss.get('general.favicon')) : asset_path('default_favicon.png') %>
+<%= content_tag :title, @presenter.get("general.publication_name") %>
+<%#= favicon_link_tag @presenter.get('general.favicon').present? ? @presenter.get('general.favicon') : asset_path('default_favicon.png') %>
+<%= favicon_link_tag asset_path('bravura_template_base/defaults/default_favicon.ico'), skip_pipeline: true %>
 <%= tag.meta charset: "utf-8" %>
 <%= tag.meta name: "viewport", content: "width=device-width,initial-scale=1" %>
 <%= tag.meta name: "twitter:card", content: "summary_large_image" %>
 <%= tag.meta property: "og:type", content: "website" %>
-<%= tag.meta property: "og:locale", content: @gss.get('general.open_graph_locale') %>
+<%= tag.meta property: "og:locale", content: @presenter.get('general.open_graph_locale') %>
 <%= tag.meta name: "robots", content: "index,follow" %>
-<%= tag.meta name: "description", content: @gss.get('general.meta_description') %>
-<%= tag.meta property: "og:title", content: @gss.get("general.publication_name") %>
-<%= tag.meta property: "og:description", content: @gss.get('general.meta_description') %>
-<%= tag.meta property: "og:image", content: @gss.get('general.social_cover') %>
-<%= tag.meta property: "og:site_name", content: @gss.get('general.publication_name') %>
+<%= tag.meta name: "description", content: @presenter.get('general.meta_description') %>
+<%= tag.meta property: "og:title", content: @presenter.get("general.publication_name") %>
+<%= tag.meta property: "og:description", content: @presenter.get('general.meta_description') %>
+<%= tag.meta property: "og:image", content: @presenter.get('general.social_cover') %>
+<%= tag.meta property: "og:site_name", content: @presenter.get('general.publication_name') %>
 <%= tag.meta property: "og:type", content: "article" %>
 <%= csrf_meta_tags %>
 <%= csp_meta_tag %>
@@ -48,8 +49,8 @@
 
 <style>
   :root {
-    --headings-font-family: <%= @gss.get("design.heading_font") %>, sans-serif, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    --content-font-family: <%= @gss.get("design.content_font") %>, sans-serif, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --headings-font-family: <%= @presenter.get("design.heading_font") %>, sans-serif, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --content-font-family: <%= @presenter.get("design.content_font") %>, sans-serif, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --cta-button-radius: <%= cta_button_radius %>;
   }
   .notion-collection-page-properties { display: none !important; }
