--- a/app/views/bravura_template_prime/shared/_head.html.erb
+++ b/app/views/bravura_template_prime/shared/_head.html.erb
@@ -24,7 +24,9 @@
 %>
 
 <%= content_tag :title, @presenter.get("general.publication_name") %>
-<%= favicon_link_tag @presenter.get('general.favicon').present? ? @presenter.get('general.favicon') : asset_path('bravura_template_base/defaults/default_favicon.ico') %>
+<%# FIXME: running out of time. Make the custom favicon_link_tag link work later. %>
+<%#= favicon_link_tag @presenter.get('general.favicon').present? ? @presenter.get('general.favicon') : asset_path('bravura_template_base/defaults/default_favicon.ico') %>
+<%= favicon_link_tag asset_path('bravura_template_base/defaults/default_favicon.ico') %>
 <%= tag.meta charset: "utf-8" %>
 <%= tag.meta name: "viewport", content: "width=device-width,initial-scale=1" %>
 <%= tag.meta name: "twitter:card", content: "summary_large_image" %>
