--- a/app/views/bravura_template_prime/shared/_header.html.erb
+++ b/app/views/bravura_template_prime/shared/_header.html.erb
@@ -1,13 +1,18 @@
-<header class="navbar sticky z-20 h-16 bg-white/90 shadow-sm backdrop-blur-lg top-0 py-3">
-	<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-		<div class="flex items-center justify-between">
-      <%= render "/bravura_template_prime/shared/logo" %>
+<%# app/views/bravura_template_prime/shared/_header.html.erb %>
+<header class="bg-white shadow-sm">
+  <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="flex justify-between h-16">
+      <%= render 'bravura_template_prime/shared/logo' %>
+      <div class="flex items-center">
       <%= render "/bravura_template_prime/shared/nav_links" %>
-			<div class="nav-links-wrapper-right flex items-center justify-end gap-3 lg:gap-4">
-        <%= render "/bravura_template_prime/shared/search_glass_button" %>
-        <%= render "/bravura_template_prime/shared/search_widget_dialog" %>
-        <%= render "/bravura_template_prime/shared/hamburger_menu" %>
-			</div>
-		</div>
-	</div>
+        <% if @presenter.get("navigation.site_search") %>
+          <label for="search-toggle" class="ml-4 text-secondary-500 hover:text-secondary-700 cursor-pointer">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+            </svg>
+          </label>
+        <% end %>
+      </div>
+    </div>
+  </nav>
 </header>
