CHANGE: replaced filler content with dynamic content for author article excerpt

--- a/app/views/bravura_template_prime/authors/show/_article_content.html.erb
+++ b/app/views/bravura_template_prime/authors/show/_article_content.html.erb
@@ -1,7 +1,6 @@
 <%= link_to blog_path(article), class: "block mt-4", data: { "umami-event": "Clicked Link: #{article.slug}", "umami-href": blog_path(article) } do %>
   <h3 class="article-title text-xl font-bold tracking-tight text-secondary-900"><%= article.title %></h3>
-  <p class="article-excerpt text-base font-medium text-secondary-500 line-clamp-3 mt-3"><%= article.excerpt %></p>
-  <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis et veritatis earum obcaecati consequatur pariatur. Optio minus laborum consectetur eius, quidem commodi totam, porro sequi ut veniam ipsam cum minima?
-  </p>
+  <p class="article-excerpt text-base font-medium text-secondary-500 line-clamp-3 mt-3">
+			<%= truncate(article.excerpt.to_plain_text, length: 95, omission: "...") %>
+		</p>
 <% end %>
