--- a/app/views/bravura_template_prime/blog/show.html.erb
+++ b/app/views/bravura_template_prime/blog/show.html.erb
@@ -1,3 +1,11 @@
+<% content_for :head do %>
+  <style>
+    .trix-content h1 {
+      --tw-text-opacity: 1;
+      color: rgb(var(--secondary-900) / var(--tw-text-opacity));
+    }
+  </style>
+<% end %>
 <%= render "bravura_template_prime/blog/show/hero" %>
 
 
