CHANGE: improved the trix rich text syling to conform to the theme for the show page

--- a/app/views/bravura_template_prime/blog/show.html.erb
+++ b/app/views/bravura_template_prime/blog/show.html.erb
@@ -1,6 +1,6 @@
 <% content_for :head do %>
   <style>
-    .trix-content h1 {
+    .trix-content {
       --tw-text-opacity: 1;
       color: rgb(var(--secondary-900) / var(--tw-text-opacity));
     }
