CHANGE: improved the trix rich text h1 styling to conform to the theme for the show page

--- a/app/views/bravura_template_prime/blog/show.html.erb
+++ b/app/views/bravura_template_prime/blog/show.html.erb
@@ -1,6 +1,10 @@
 <% content_for :head do %>
-  <style>
+  <style type="text/css">
     .trix-content {
+      --tw-text-opacity: 1;
+      color: rgb(var(--secondary-900) / var(--tw-text-opacity));
+    }
+    .trix-content h1 {
       --tw-text-opacity: 1;
       color: rgb(var(--secondary-900) / var(--tw-text-opacity));
     }
